5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1644_2447.log
== SUBMITION (2019-04-11 16:13:35) 
-- CODE:
pr = float(input())
pg = flot(input())
if(pr>pg):
	print("Falta ",(pr-pg))
else:
	print("Troco de ",(pg-pr))
-- EXECUTION TIME:
0.149192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 2, in <module>
    pg = flot(input())
NameError: name 'flot' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:13:40) 
-- CODE:
pr = float(input())
pg = flot(input())
if(pr>pg):
	print("Falta ",(pr-pg))
else:
	print("Troco de ",(pg-pr))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pg = flot(input())
NameError: name 'flot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:13:54) 
-- CODE:
pr = float(input())
pg = float(input())
if(pr>pg):
	print("Falta ",(pr-pg))
else:
	print("Troco de ",(pg-pr))
-- EXECUTION TIME:
0.199445
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
